@@ -34,6 +34,7 @@
 bool RKSettingsModuleConsole::save_history;
 uint RKSettingsModuleConsole::max_history_length;
 uint RKSettingsModuleConsole::max_console_lines;
+bool RKSettingsModuleConsole::pipe_user_commands_through_console;
 
 RKSettingsModuleConsole::RKSettingsModuleConsole (RKSettings *gui, QWidget *parent) : RKSettingsModule (gui, parent) {
 	RK_TRACE (SETTINGS);
@@ -57,6 +58,13 @@ RKSettingsModuleConsole::RKSettingsModuleConsole (RKSettings *gui, QWidget *pare
 	connect (max_console_lines_spinner, SIGNAL (valueChanged (int)), this, SLOT (changedSetting (int)));
 	vbox->addWidget (max_console_lines_spinner);
 
+	vbox->addSpacing (2*RKGlobals::spacingHint ());
+
+	pipe_user_commands_through_console_box = new QCheckBox (i18n ("Run commands from script editor through console"), this);
+	pipe_user_commands_through_console_box->setChecked (pipe_user_commands_through_console);
+	connect (pipe_user_commands_through_console_box, SIGNAL (stateChanged (int)), this, SLOT (changedSetting (int)));
+	vbox->addWidget (pipe_user_commands_through_console_box);
+
 	vbox->addStretch ();
 }
 
@@ -77,6 +85,7 @@ void RKSettingsModuleConsole::saveSettings (KConfig *config) {
 	config->writeEntry ("save history", save_history);
 	config->writeEntry ("max history length", max_history_length);
 	config->writeEntry ("max console lines", max_console_lines);
+	config->writeEntry ("pipe user commands through console", pipe_user_commands_through_console);
 }
 
 //static
@@ -87,6 +96,7 @@ void RKSettingsModuleConsole::loadSettings (KConfig *config) {
 	save_history = config->readBoolEntry ("save history", true);
 	max_history_length = config->readNumEntry ("max history length", 100);
 	max_console_lines = config->readNumEntry ("max console lines", 500);
+	pipe_user_commands_through_console = config->readBoolEntry ("pipe user commands through console", true);
 }
 
 //static
@@ -123,6 +133,7 @@ void RKSettingsModuleConsole::applyChanges () {
 	save_history = save_history_box->isChecked ();
 	max_history_length = max_history_length_spinner->value ();
 	max_console_lines = max_console_lines_spinner->value ();
+	pipe_user_commands_through_console = pipe_user_commands_through_console_box->isChecked ();
 }
 
 void RKSettingsModuleConsole::save (KConfig *config) {
