@@ -26,6 +26,7 @@
 
 #include "rkcommandeditorwindow.h"
 #include "../rkglobals.h"
+#include "../rkconsole.h"
 #include "../rbackend/rinterface.h"
 #include "../debug.h"
 
@@ -63,7 +64,7 @@ void RKCommandEditorWindowPart::slotRunSelection() {
 
 	if (command_editor->getSelection ().isEmpty () || command_editor->getSelection ().isNull ()) return;
 
-	RKGlobals::rInterface ()->issueCommand (new RCommand (command_editor->getSelection (), RCommand::User, QString::null));
+	RKConsole::pipeUserCommand (new RCommand (command_editor->getSelection (), RCommand::User, QString::null));
 }
 
 void RKCommandEditorWindowPart::slotRunLine() {
@@ -71,7 +72,7 @@ void RKCommandEditorWindowPart::slotRunLine() {
 
 	if (command_editor->getLine ().isEmpty () || command_editor->getLine().isNull ()) return;
 
-	RKGlobals::rInterface ()->issueCommand (new RCommand (command_editor->getLine (), RCommand::User, QString::null));
+	RKConsole::pipeUserCommand (new RCommand (command_editor->getLine (), RCommand::User, QString::null));
 }
 
 
@@ -79,8 +80,8 @@ void RKCommandEditorWindowPart::slotRunAll() {
 	RK_TRACE (COMMANDEDITOR);
 
 	if (command_editor->getText ().isEmpty () || command_editor->getText ().isNull ()) return;
-		
-	RKGlobals::rInterface ()->issueCommand (new RCommand (command_editor->getText (), RCommand::User, QString::null));
+
+	RKConsole::pipeUserCommand (new RCommand (command_editor->getText (), RCommand::User, QString::null));
 }
 
 void RKCommandEditorWindowPart::slotFunctionReference () {
